--- a/Free Shopping/projeto.html
+++ b/Free Shopping/projeto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
             <a>About</a>
             <a>Contact</a>
         </header>
-        <img src="../img.png">
+        <img src="./img.png">
      </section>
      </div>
 </body>
